css/components.css
.grid-wrapper {
  list-style-type: none;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 0.6em;
  padding: 10px;
  margin-bottom: 10px;
}

.grid-wrapper > li {
  display: flex;
  flex-direction: column;

  /* justify-content: center;
  align-items: center; */
  text-align: center;
  border: 1px solid var(--color-primary);
  padding: 5px;
}

.flex-wrapper {
  list-style-type: none;
  display: flex;
  gap: 0.6em;
  padding: 10px;
  margin-bottom: 10px;
}

.flex-wrapper li {
  border: 1px solid var(--color-primary);
  padding: 5px;
}

section {
  margin: 5px 8px 20px 10px;
}

.table-wrapper {
  overflow: auto;
  margin: 5px 8px 20px 10px;
}

table {
  border-collapse: collapse;
}

thead {
  background-color: var(--clr-pri-ts1);
  color: white;
  position: sticky;
}

th,
td {
  padding: 10px;
  text-align: center;
}

tbody tr:nth-child(odd) {
  background-color: rgb(194 194 194);
}

tbody th {
  background-color: var(--clr-pri-ts2);
}

/* recommended column */
td:nth-child(2) {
  background-color: yellow;
}

.cta-btn {
  width: 200px;
  height: 30px;
  color: white;
  background-color: var(--color-accent);
  text-decoration: none;
  border-radius: 9999px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.form-container {
  display: flex;
  justify-content: center;
}

form {
  max-width: 1200px;
  display: flex;
  flex-direction: column;
  gap: 20px;
  background-color: rgb(250 239 225);
  padding: 20px;
  border: 1px solid black;
}

form fieldset {
  display: flex;
  flex-direction: column;
  background-color: bisque;
  gap: 10px;
}

.form-pair {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 10px;
}

.form-label-input {
  display: flex;
  height: 30px;
  align-items: center;
  gap: 10px;
  flex: 1;
}

.form-label-input label {
  width: 180px;
}

.form-label-input input,
.form-label-input select {
  height: 30px;
}

.form-label-input .input-error,
.form-label-input select,
.form-label-input textarea {
  flex: 1;
}

.form-label-input .input-error {
  display: flex;
  flex-direction: column;
}

.form-btns {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  gap: 10px;
}

input:focus {
  box-shadow: inset 2px 2px 5px rgb(0 0 0 / 30%);
}

.err-msg {
  display: none;
}

input:user-invalid {
  border: 2px solid red;
}

input:user-invalid ~ .err-msg {
  display: block;
  color: red;
}

select:user-invalid {
  border: 2px solid red;
}

select:user-invalid ~ .err-msg {
  display: block;
  color: red;
}

.form-btns button:hover {
  box-shadow:
    0 1px 4px blue,
    0 3px 12px blueviolet;
  padding: 5px;
}

.map-container {
  width: 400px;
  height: 400px;
  border-radius: 50%;
  overflow: hidden;
  transform: translateZ(0);
  border: 1px solid black;
}

.map-container iframe {
  width: 100%;
  height: 100%;
  display: block;
}

@media screen and (width <= 680px) {
  .grid-wrapper {
    grid-template-columns: 1fr;
  }
}

@media (width < 768px) {
  .form-label-input {
    flex-direction: column;
    align-items: flex-start;
  }

  .form-pair {
    margin-bottom: 20px;
  }
}

#dark-mode-btn {
  position: fixed;
  right: 0;
  margin-right: 20px;
  color: var(--clr-pri-ts1);
  background-color: var(--color-bg);
  border-radius: 9999px;
  padding: 10px;
  font-size: 14px;
  font-weight: 700;
}

